--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
 
-<body>
+<body style="background-color: #151515;">
     <header>
-        <section class="d-flex justify-content-between header-design bg-black">
+        <section class="d-flex justify-content-between header-design bg-black mb-5">
             <div class="row gx-4">
                 <div class="mt-5 position-relative container col-3">
                     <img src="images/Mphabe.png" alt="" class=".img-fluid position-absolute bottom-0 start-0 img-top">
@@ -31,7 +31,7 @@
                 <div class="d-block col-7 align-self-center">
                     <h1 class="headline">Transfer Market</h1>
                     <p class="text-white text-center">Let's say you are going to build a football team. Already you have
-                        9 members.
+                        6 members.
                         Now you can choose
                         5
                         players from our list. Choose you best five players and enjoy the game.</p>
@@ -50,9 +50,125 @@
         </section>
     </header>
 
-    <main style="background-color: #151515;">
+    <main class="my-5">
+        <section class="container pt-4 pb-5">
+            <div class="row g-3">
+                <div class="col-9">
+                    <div class="row row-cols-3 g-3">
+                        <div class="col">
+                            <div class="card bg-black">
+                                <img src="images/Ney.png" class="card-img-top" alt="...">
+                                <div class="card-body text-white text-center">
+                                    <h5 class="card-title fs-4">Neymar Jr</h5>
+                                    <p class="card-text fs-5">36 Goals with 120 Assists</p>
+                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bg-black">
+                                <img src="images/messi.png" class="card-img-top" alt="...">
+                                <div class="card-body text-white text-center">
+                                    <h5 class="card-title fs-4">Lionel Messi</h5>
+                                    <p class="card-text fs-5">36 Goals with 120 Assists</p>
+                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bg-black">
+                                <img src="images/bappi.png" class="card-img-top" alt="...">
+                                <div class="card-body text-white text-center">
+                                    <h5 class="card-title fs-4">Kylian Mbappé</h5>
+                                    <p class="card-text fs-5">36 Goals with 120 Assists</p>
+                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bg-black">
+                                <img src="images/Machado.png" class="card-img-top" alt="...">
+                                <div class="card-body text-white text-center">
+                                    <h5 class="card-title fs-4">Vítor Machado</h5>
+                                    <p class="card-text fs-5">22 Goals with 12 Assists</p>
+                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bg-black">
+                                <img src="images/ramos.png" class="card-img-top" alt="...">
+                                <div class="card-body text-white text-center">
+                                    <h5 class="card-title fs-4">Sergio Ramos</h5>
+                                    <p class="card-text fs-5">16 Goals with 13 Assists</p>
+                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bg-black">
+                                <img src="images/Renato.png" class="card-img-top" alt="...">
+                                <div class="card-body text-white text-center">
+                                    <h5 class="card-title fs-4">Renato Sanches</h5>
+                                    <p class="card-text fs-5">3 Goals with 10 Assists</p>
+                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-3">
+                    <div class="row row-cols-1 gy-3">
+                        <div class="col">
+                            <div class="card bg-black text-white">
+                                <div class="card-body text-center">
+                                    <h5 class="card-title fw-bold fs-4">Selected - V</h5>
+                                    <hr style="border: 2px solid #FF5E19;">
 
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="card bg-black text-white">
+                                <div class="card-body text-center">
+                                    <h3 class="card-title fw-bold fs-4">Budget</h3>
+                                    <hr style="border: 2px solid #FF5E19;">
+                                    <div class="d-flex justify-content-between">
+                                        <h6>Per Player : </h6>
+                                        <input type="text" name="" id="" class="w-50 h-75">
+                                    </div>
+                                    <a href="#" class="btn btn-primary px-5 mt-3">Calculate</a>
+                                    <div class="d-flex justify-content-between mt-3">
+                                        <h6>Player Expenses </h6>
+                                        <p>$ <span>0</span></p>
+                                    </div>
+                                    <div class="d-flex justify-content-between  mt-3">
+                                        <h6>Manager : </h6>
+                                        <input type="text" name="" id="" class="w-50 h-75">
+                                    </div>
+                                    <div class="d-flex justify-content-between  mt-3">
+                                        <h6>Coach : </h6>
+                                        <input type="text" name="" id="" class="w-50 h-75">
+                                    </div>
+                                    <a href="#" class="btn btn-primary px-5 mt-3">Calculate Total</a>
+                                    <div class="d-flex justify-content-between mt-3">
+                                        <h6>Total</h6>
+                                        <p>$ <span>0</span></p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
+
+    <hr style="border: 1px solid white;">
+
+    <footer style="min-height: 90px;" class="text-center text-white pt-4">
+        <p>Copyright @ 2022 All Rights Reserved.</p>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
