--- a/index.html
+++ b/index.html
@@ -135,25 +135,26 @@
                                     <hr style="border: 2px solid #FF5E19;">
                                     <div class="d-flex justify-content-between">
                                         <h6>Per Player : </h6>
-                                        <input type="text" name="" id="" class="w-50 h-75">
+                                        <input type="text" name="" id="player" class="w-50 h-75">
                                     </div>
-                                    <a href="#" class="btn btn-primary px-5 mt-3">Calculate</a>
+                                    <button id="calculate" class="btn btn-primary px-5 mt-3">Calculate</button>
                                     <div class="d-flex justify-content-between mt-3">
                                         <h6>Player Expenses </h6>
-                                        <p>$ <span>0</span></p>
+                                        <p>$ <span id="player-cost">0</span></p>
                                     </div>
                                     <div class="d-flex justify-content-between  mt-3">
                                         <h6>Manager : </h6>
-                                        <input type="text" name="" id="" class="w-50 h-75">
+                                        <input type="text" name="" id="manager" class="w-50 h-75">
                                     </div>
                                     <div class="d-flex justify-content-between  mt-3">
                                         <h6>Coach : </h6>
-                                        <input type="text" name="" id="" class="w-50 h-75">
+                                        <input type="text" name="" id="coach" class="w-50 h-75">
                                     </div>
-                                    <a href="#" class="btn btn-primary px-5 mt-3">Calculate Total</a>
+                                    <button id="calculate-total" class="btn btn-primary px-5 mt-3">Calculate
+                                        Total</button>
                                     <div class="d-flex justify-content-between mt-3">
                                         <h6>Total</h6>
-                                        <p>$ <span>0</span></p>
+                                        <p>$ <span id="total">0</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -167,13 +168,14 @@
     <hr style="border: 1px solid white;">
 
     <footer style="min-height: 90px;" class="text-center text-white pt-4">
-        <p>Copyright @ 2022 All Rights Reserved.</p>
+        <p>Copyright @ 2023 All Rights Reserved.</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
         crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/calculation.js"></script>
+    <script src="js/selectList.js"></script>
 </body>
 
 </html>
