--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
                             <div class="card bg-black">
                                 <img src="images/Ney.png" class="card-img-top" alt="...">
                                 <div class="card-body text-white text-center">
-                                    <h5 class="card-title fs-4">Neymar Jr</h5>
+                                    <h5 id="neymar" class="card-title fs-4">Neymar Jr</h5>
                                     <p class="card-text fs-5">36 Goals with 120 Assists</p>
-                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                    <button id="select-btn-1" class="btn btn-primary px-5">SELECT</button>
                                 </div>
                             </div>
                         </div>
@@ -69,9 +69,9 @@
                             <div class="card bg-black">
                                 <img src="images/messi.png" class="card-img-top" alt="...">
                                 <div class="card-body text-white text-center">
-                                    <h5 class="card-title fs-4">Lionel Messi</h5>
+                                    <h5 id="messi" class="card-title fs-4">Lionel Messi</h5>
                                     <p class="card-text fs-5">36 Goals with 120 Assists</p>
-                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                    <button id="select-btn-2" class="btn btn-primary px-5">SELECT</button>
                                 </div>
                             </div>
                         </div>
@@ -79,9 +79,9 @@
                             <div class="card bg-black">
                                 <img src="images/bappi.png" class="card-img-top" alt="...">
                                 <div class="card-body text-white text-center">
-                                    <h5 class="card-title fs-4">Kylian Mbappé</h5>
+                                    <h5 id="bappi" class="card-title fs-4">Kylian Mbappé</h5>
                                     <p class="card-text fs-5">36 Goals with 120 Assists</p>
-                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                    <button id="select-btn-3" class="btn btn-primary px-5">SELECT</button>
                                 </div>
                             </div>
                         </div>
@@ -89,9 +89,9 @@
                             <div class="card bg-black">
                                 <img src="images/Machado.png" class="card-img-top" alt="...">
                                 <div class="card-body text-white text-center">
-                                    <h5 class="card-title fs-4">Vítor Machado</h5>
+                                    <h5 id="vitor" class="card-title fs-4">Vítor Machado</h5>
                                     <p class="card-text fs-5">22 Goals with 12 Assists</p>
-                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                    <button id="select-btn-4" class="btn btn-primary px-5">SELECT</button>
                                 </div>
                             </div>
                         </div>
@@ -99,9 +99,9 @@
                             <div class="card bg-black">
                                 <img src="images/ramos.png" class="card-img-top" alt="...">
                                 <div class="card-body text-white text-center">
-                                    <h5 class="card-title fs-4">Sergio Ramos</h5>
+                                    <h5 id="ramos" class="card-title fs-4">Sergio Ramos</h5>
                                     <p class="card-text fs-5">16 Goals with 13 Assists</p>
-                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                    <button id="select-btn-5" class="btn btn-primary px-5">SELECT</button>
                                 </div>
                             </div>
                         </div>
@@ -109,9 +109,9 @@
                             <div class="card bg-black">
                                 <img src="images/Renato.png" class="card-img-top" alt="...">
                                 <div class="card-body text-white text-center">
-                                    <h5 class="card-title fs-4">Renato Sanches</h5>
+                                    <h5 id="renato" class="card-title fs-4">Renato Sanches</h5>
                                     <p class="card-text fs-5">3 Goals with 10 Assists</p>
-                                    <a href="#" class="btn btn-primary px-5">SELECT</a>
+                                    <button id="select-btn-6" class="btn btn-primary px-5">SELECT</button>
                                 </div>
                             </div>
                         </div>
@@ -124,7 +124,8 @@
                                 <div class="card-body text-center">
                                     <h5 class="card-title fw-bold fs-4">Selected - V</h5>
                                     <hr style="border: 2px solid #FF5E19;">
-
+                                    <ol class="text-white fs-5 text-start" id="selected-player-list">
+                                    </ol>
                                 </div>
                             </div>
                         </div>
